--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=midtermSpring
+spring.datasource.url=jdbc:postgresql://localhost:5432/midTerm
+spring.datasource.username=postgres
+spring.datasource.password=null
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
