--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.h2.console.enabled=true
+# Swagger Configuration
+springfox.documentation.swagger-ui.enabled=true
+
