--- a/src/main/resources/application-localpgsql.properties
+++ b/src/main/resources/application-localpgsql.properties
@@ -4,3 +4,36 @@ spring.datasource.password=null
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
+
+spring.security.oauth2.client.registration.github.client-id=Ov23liqBthbxEhgV5Ov8
+spring.security.oauth2.client.registration.github.client-secret=3e5a5caafebf869224d71209de27a1a5a5d4a482
+spring.security.oauth2.client.registration.google.client-id=7922328080-6e8beeq9c05blpff8kf9a8a9tmr27se2.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+spring.security.oauth2.client.registration.facebook.client-id=440457095236344
+spring.security.oauth2.client.registration.facebook.client-secret=831eb5f731e4305887808c022139bb36
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#spring.security.oauth2.client.registration.google.client-id=129905733726-jeb2k3vs0pda6r2nka1kbntjbekabr1q.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=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
+#
+#spring.security.oauth2.client.registration.facebook.client-id=820159706707077
+#spring.security.oauth2.client.registration.facebook.client-secret=2c3b5920bc67f75fa034937501f6ac8f
+
+#spring.security.oauth2.client.registration.github.client-id=Ov23ctUQTqJExtw1YO4b
+#spring.security.oauth2.client.registration.github.client-secret=eb6df2d98750da6c6f686602f7ae28b590e7174a
+#
