--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.h2.console.enabled=true
 # Swagger Configuration
 springfox.documentation.swagger-ui.enabled=true
 
+spring.security.oauth2.client.registration.github.client-id=Ov23liqBthbxEhgV5Ov8
+spring.security.oauth2.client.registration.github.client-secret=3e5a5caafebf869224d71209de27a1a5a5d4a482
